--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:fres="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg_login"
+    android:background="#30425a"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -19,54 +20,59 @@
         android:layout_weight="2">
 
         <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@mipmap/logo" />
-
+            android:src="@drawable/login_logo" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        android:padding="10dp">
 
         <RelativeLayout
             android:id="@+id/frameLayout1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@android:color/white"
-            android:alpha="0.8">
+            android:alpha="0.8"
+            android:background="@android:color/transparent">
 
             <ImageView
                 android:id="@+id/iv_username"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginStart="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:contentDescription="密码"
-                android:scaleType="centerInside"
-                android:src="@mipmap/username" />
-
+                android:src="@drawable/ic_login_user" />
 
             <EditText
                 android:id="@+id/user_name"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:maxLength="20"
-                android:text="yanghang"
-                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/iv_username"
                 android:background="@android:color/transparent"
+                android:gravity="center_vertical"
+                android:hint="请输入手机号"
                 android:imeOptions="actionNext"
                 android:inputType="text"
-                android:hint="请输入手机号"
-                android:lines="1"/>
+                android:lines="1"
+                android:maxLength="20"
+                android:text="yanghang"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_below="@id/user_name"
+                android:layout_marginTop="5dp"
+                android:background="@android:color/white" />
 
         </RelativeLayout>
 
@@ -76,40 +82,43 @@
             android:layout_height="50dp"
             android:layout_below="@+id/frameLayout1"
             android:layout_marginTop="16dp"
-            android:background="@android:color/white"
-            android:alpha="0.8">
+            android:alpha="0.8"
+            android:background="@android:color/transparent">
 
             <ImageView
                 android:id="@+id/iv_password"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginEnd="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginStart="5dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:contentDescription="密码"
-                android:scaleType="centerInside"
-                android:src="@mipmap/login_password" />
-
+                android:src="@drawable/ic_login_pwd" />
 
             <EditText
-                android:hint="请输入密码"
                 android:id="@+id/user_password"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:maxLength="50"
-                android:text="111111"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/iv_password"
                 android:background="@android:color/transparent"
-                android:inputType="textPassword"
+                android:hint="请输入密码"
                 android:imeOptions="actionDone"
-                android:lines="1"/>
+                android:inputType="textPassword"
+                android:lines="1"
+                android:maxLength="50"
+                android:text="111111"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_below="@id/user_password"
+                android:layout_marginTop="5dp"
+                android:background="@android:color/white" />
 
         </RelativeLayout>
-
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btLogin"
@@ -117,19 +126,19 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/frameLayout2"
             android:layout_marginTop="34dp"
-            android:background="@color/cardView"
+            android:background="@drawable/sp_rr_2395fc"
             android:text="登录"
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/copyright"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/copyright"
             android:layout_alignParentBottom="true"
-            android:text="版权所有©️重庆地理信息中心"
-            android:textSize="12sp"
             android:layout_centerHorizontal="true"
-            android:textColor="#333333"/>
+            android:text="版权所有©️重庆地理信息中心"
+            android:textColor="#333333"
+            android:textSize="12sp" />
     </RelativeLayout>
 </LinearLayout>
