--- a/app/src/main/res/drawable/selector_unit.xml
+++ b/app/src/main/res/drawable/selector_unit.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:drawable="@mipmap/ic_unit_true_modifi" />
-    <item android:state_checked="false" android:drawable="@mipmap/ic_unit_false_modifi" />
+    <item android:drawable="@drawable/ic_unit_selected" android:state_checked="true" />
+    <item android:drawable="@drawable/ic_unit_normal" android:state_checked="false" />
 </selector>
