--- a/app/src/main/res/layout/fragment_unit.xml
+++ b/app/src/main/res/layout/fragment_unit.xml
@@ -9,71 +9,47 @@
     <android.zhixun.uiho.com.gissystem.ui.widget.BaseMapView
         android:id="@+id/mapView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
     </android.zhixun.uiho.com.gissystem.ui.widget.BaseMapView>
 
     <RelativeLayout
         android:id="@+id/cv_sift"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_below="@+id/search_bar"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/shadow_rr"
+        android:background="@drawable/ic_filter"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
-
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            app:srcCompat="@mipmap/ic_filter" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/cv_layer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/search_bar"
         android:layout_marginRight="10dp"
-        android:background="@drawable/shadow_rr"
+        android:background="@drawable/ic_switch_map"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
 
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            app:srcCompat="@mipmap/ic_switch" />
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/cv_clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/cv_layer"
         android:layout_marginRight="10dp"
-        android:background="@drawable/shadow_rr"
+        android:background="@drawable/ic_red_cancel"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:visibility="gone"
         tools:visibility="visible">
-
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            app:srcCompat="@mipmap/ic_quxiao" />
 
     </RelativeLayout>
 
@@ -117,21 +93,13 @@
 
     <RelativeLayout
         android:id="@+id/cv_space"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_below="@+id/cv_statistics"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/shadow_rr"
+        android:background="@drawable/ic_space"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
-
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/aci_space"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            android:src="@mipmap/ic_kongjian" />
 
     </RelativeLayout>
 
@@ -177,62 +145,38 @@
 
     <RelativeLayout
         android:id="@+id/cv_my_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
+        android:layout_above="@+id/iv_zoom_in"
+        android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/shadow_rr"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/ic_location"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
 
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_margin="10dp"
-            app:srcCompat="@mipmap/ic_location" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/iv_zoom_in"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
+        android:layout_above="@+id/iv_zoom_out"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="-5dp"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@drawable/ic_zoom_in" />
+
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/iv_zoom_out"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
-        android:background="@drawable/shadow_rr"
-        android:divider="@drawable/my_divider"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:showDividers="middle">
-
-        <RelativeLayout
-            android:id="@+id/aiv_zoom_in"
-            android:layout_width="@dimen/map_option_item_size"
-            android:layout_height="@dimen/map_option_item_size">
-
-            <android.support.v7.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                app:srcCompat="@mipmap/ic_blow_up" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/aiv_zoom_out"
-            android:layout_width="@dimen/map_option_item_size"
-            android:layout_height="@dimen/map_option_item_size">
-
-            <android.support.v7.widget.AppCompatImageView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:padding="8dp"
-                app:srcCompat="@mipmap/ic_shrink" />
-        </RelativeLayout>
-    </LinearLayout>
+        app:srcCompat="@drawable/ic_zoom_out" />
 
     <include
         android:id="@+id/search_bar"
