--- a/app/src/main/res/layout/layout_close.xml
+++ b/app/src/main/res/layout/layout_close.xml
@@ -1,25 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_margin="0dp"
-    android:orientation="vertical" android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:orientation="vertical">
+
     <android.support.v7.widget.CardView
         android:id="@+id/cv_close"
-        android:layout_margin="0dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
+        android:layout_margin="0dp"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardCornerRadius="0dp"
-        app:cardUseCompatPadding="true"
-        app:cardElevation="4dp">
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true">
 
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:padding="8dp"
-            app:srcCompat="@drawable/ic_close_black_24dp" />
+            app:srcCompat="@drawable/ic_cancle_top_circle" />
     </android.support.v7.widget.CardView>
 </LinearLayout>
