--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -3,30 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
     android:layout_marginTop="10dp"
     android:background="@drawable/shadow_rr">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
+        android:minHeight="45dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_user"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:scaleType="fitXY"
-            android:src="@mipmap/username_white" />
+            android:paddingLeft="5dp"
+            android:paddingRight="7dp"
+            android:src="@drawable/ic_user" />
 
         <EditText
             android:id="@+id/et_search"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
-            android:background="@null"
+            android:background="@drawable/et_search_bg"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:hint="请输入单位名称或组织机构代码"
