--- a/app/src/main/res/layout/activity_unit_detail.xml
+++ b/app/src/main/res/layout/activity_unit_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_unit_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +12,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.esri.arcgisruntime.mapping.view.MapView
+        <android.zhixun.uiho.com.gissystem.ui.widget.BaseMapView
             android:id="@+id/mapView"
             android:layout_width="fill_parent"
             android:layout_height="160dp" />
@@ -166,7 +166,7 @@
                 android:layout_toLeftOf="@+id/iv_next2"
                 android:textColor="@color/colorPrimary"
                 android:textSize="12sp"
-                tools:text="6条报件"/>
+                tools:text="6条报件" />
 
 
             <ImageView
@@ -442,7 +442,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/left_slide"/>
+                app:srcCompat="@mipmap/left_slide" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView1"
@@ -458,10 +458,9 @@
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/right_slide"/>
+                app:srcCompat="@mipmap/right_slide" />
 
         </LinearLayout>
-
 
 
         <TextView
@@ -483,28 +482,30 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="8dp">
+
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/aiv_legal_person_left"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/left_slide"/>
+                app:srcCompat="@mipmap/left_slide" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView2"
                 android:layout_width="0dp"
-                android:layout_weight="12"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_weight="12">
 
             </android.support.v7.widget.RecyclerView>
+
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/aiv_legal_person_right"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/right_slide"/>
+                app:srcCompat="@mipmap/right_slide" />
 
         </LinearLayout>
 
@@ -527,28 +528,30 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="8dp">
+
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/aiv_relate_left"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/left_slide"/>
+                app:srcCompat="@mipmap/left_slide" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView3"
                 android:layout_width="0dp"
-                android:layout_weight="12"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_weight="12">
 
             </android.support.v7.widget.RecyclerView>
+
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/aiv_relate_right"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                app:srcCompat="@mipmap/right_slide"/>
+                app:srcCompat="@mipmap/right_slide" />
 
         </LinearLayout>
 
