--- a/app/src/main/res/layout/fragment_unit.xml
+++ b/app/src/main/res/layout/fragment_unit.xml
@@ -185,7 +185,8 @@
     <android.zhixun.uiho.com.gissystem.ui.widget.DragLayout
         android:id="@+id/dragLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         tools:visibility="gone">
 
         <RelativeLayout
@@ -204,7 +205,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/content_rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         </android.support.v7.widget.RecyclerView>
 
