--- a/app/src/main/res/layout/item_dispatch_bottom.xml
+++ b/app/src/main/res/layout/item_dispatch_bottom.xml
@@ -15,15 +15,30 @@
         android:textSize="18sp"
         tools:text="重庆市地理信息中心" />
 
-    <TextView
-        android:id="@+id/tv_reportNo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="12dp"
-        android:textColor="@color/qmui_config_color_gray_1"
-        android:textSize="16sp"
-        tools:text="渝测成2018-0007" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/tv_reportNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="12dp"
+            android:textColor="@color/qmui_config_color_gray_1"
+            android:textSize="16sp"
+            tools:text="渝测成2018-0007" />
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="12dp"
+            tools:text="time" />
+    </RelativeLayout>
+
 
     <View
         android:id="@+id/line"
