--- a/app/src/main/res/layout/item_main_bttom.xml
+++ b/app/src/main/res/layout/item_main_bttom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/colorWhite"
@@ -36,7 +37,7 @@
             android:layout_marginRight="4dp"
             android:layout_marginTop="-4dp"
             android:layout_toLeftOf="@+id/tv_distance"
-            app:srcCompat="@mipmap/ic_distance_modifi" />
+            app:srcCompat="@drawable/ic_distance_black" />
 
         <TextView
             android:id="@+id/tv_distance"
@@ -44,9 +45,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:text="1000m"
-            android:textColor="@color/colorPrimary"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            tools:text="1000m" />
 
         <TextView
             android:id="@+id/tv_address"
