export to local file

--- a/app/src/main/res/layout/activity_censorship_register_two.xml
+++ b/app/src/main/res/layout/activity_censorship_register_two.xml
@@ -82,6 +82,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:clickable="true"
+            android:visibility="gone"
             app:srcCompat="@mipmap/ic_add"/>
 
     </RelativeLayout>
