--- a/app/src/main/res/drawable/bg_post_server.xml
+++ b/app/src/main/res/drawable/bg_post_server.xml
@@ -4,5 +4,5 @@
     <corners android:radius="3dp" />
     <stroke
         android:width="2px"
-        android:color="@android:color/holo_red_light" />
+        android:color="@color/colorPrimary" />
 </shape>
