--- a/app/src/main/res/layout/activity_censorship_detail.xml
+++ b/app/src/main/res/layout/activity_censorship_detail.xml
@@ -279,13 +279,13 @@
                 android:textSize="14sp" />
 
             <ImageView
+                android:id="@+id/arrow_JCQK"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="10dp"
-                android:src="@mipmap/arrow_bottom"
-                android:id="@+id/arrow_JCQK"/>
+                android:src="@mipmap/arrow_bottom" />
 
         </RelativeLayout>
 
@@ -353,19 +353,19 @@
                     android:textSize="12sp" />
 
                 <ImageView
+                    android:id="@+id/arrow_result_type"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:src="@mipmap/arrow_bottom"
-                    android:id="@+id/arrow_result_type"/>
+                    android:src="@mipmap/arrow_bottom" />
             </RelativeLayout>
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1px"
-            android:layout_marginLeft="16dp"
-            android:background="@color/colorDivider" />
+                android:layout_marginLeft="16dp"
+                android:background="@color/colorDivider" />
 
             <LinearLayout
                 android:id="@+id/ll_result_type"
@@ -1067,6 +1067,7 @@
                 android:textColor="@color/colorPrimary"
                 android:textSize="12sp" />
         </RelativeLayout>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
@@ -1100,9 +1101,6 @@
                 android:textSize="12sp" />
 
         </RelativeLayout>
-
-
-
 
 
         <TextView
@@ -1265,10 +1263,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:minHeight="60dp"
             android:orientation="vertical"
             android:paddingBottom="4dp"
-            android:minHeight="60dp"
-            android:gravity="center"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:paddingTop="8dp">
@@ -1279,13 +1277,14 @@
                 android:layout_height="wrap_content">
 
             </android.support.v7.widget.RecyclerView>
+
             <TextView
                 android:id="@+id/tv_no_image"
-                android:visibility="gone"
-                android:text="未上传图片"
-                android:layout_gravity="center"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="未上传图片"
+                android:visibility="gone" />
 
         </LinearLayout>
 
