--- a/app/src/main/res/layout/item_local_file.xml
+++ b/app/src/main/res/layout/item_local_file.xml
@@ -27,7 +27,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_toLeftOf="@+id/tv_export"
             android:layout_toRightOf="@+id/tv_checked_unit"
             android:ellipsize="end"
             android:lines="1"
@@ -54,7 +53,6 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
-            android:layout_toLeftOf="@+id/tv_export"
             android:layout_toRightOf="@+id/tv_date"
             android:ellipsize="end"
             android:lines="1"
@@ -62,41 +60,94 @@
             android:textColor="#666666"
             android:textSize="12sp" />
 
+    </RelativeLayout>
 
-        <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
             android:id="@+id/tv_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_marginLeft="14dp"
             android:background="@drawable/bg_delete"
-            android:padding="4dp"
-            android:text="删除"
-            android:textColor="#333333"
-            android:textSize="14sp" />
+            android:gravity="center_vertical"
+            android:padding="5dp">
 
-        <TextView
-            android:id="@+id/tv_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/tv_delete"
-            android:layout_marginRight="16dp"
-            android:background="@drawable/bg_delete"
-            android:padding="4dp"
-            android:text="修改"
-            android:textColor="#333333"
-            android:textSize="14sp" />
+            <ImageView
+                android:layout_width="17dp"
+                android:layout_height="17dp"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_delete_red" />
 
-        <TextView
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="删除"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="15sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/tv_export"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/tv_delete"
-            android:layout_marginTop="4dp"
+            android:layout_marginLeft="14dp"
             android:background="@drawable/bg_export"
-            android:padding="4dp"
-            android:text="提交至服务器"
-            android:textColor="#333333"
-            android:textSize="14sp" />
-    </RelativeLayout>
+            android:gravity="center_vertical"
+            android:padding="5dp">
+
+            <ImageView
+                android:layout_width="17dp"
+                android:layout_height="17dp"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_export_yellow" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="导出"
+                android:textColor="#333333" />
+            <!--<TextView-->
+            <!--android:id="@+id/tv_edit"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="8dp"-->
+            <!--android:layout_toLeftOf="@+id/tv_delete"-->
+            <!--android:background="@drawable/bg_delete"-->
+            <!--android:padding="4dp"-->
+            <!--android:text="修改"-->
+            <!--android:textColor="#333333"-->
+            <!--android:textSize="14sp"-->
+            <!--android:visibility="gone" />-->
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/tv_postServer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="14dp"
+            android:background="@drawable/bg_post_server"
+            android:gravity="center_vertical"
+            android:padding="5dp">
+
+            <ImageView
+                android:layout_width="17dp"
+                android:layout_height="17dp"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_post_blue" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="提交至服务器"
+                android:textColor="#333333"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
