--- a/app/src/main/res/layout/activity_unit_detail.xml
+++ b/app/src/main/res/layout/activity_unit_detail.xml
@@ -313,6 +313,35 @@
             android:layout_marginLeft="16dp"
             android:background="#F5F5F5" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="34dp"
+            android:background="#FFFFFF"
+            android:gravity="center_vertical"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:text="邮政编码："
+                android:textColor="#666666"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/tv_postCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="8dp"
+                android:layout_toRightOf="@+id/tv_contacts"
+                android:textColor="#666666"
+                android:textSize="12sp"
+                tools:text="40000" />
+        </LinearLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="34dp"
