--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="multiple_image_select_primaryDark">#3292D3</color>
     <color name="c55f3f">#c55f3f</color>
     <color name="color_454344">#454344</color>
+    <color name="c36627">#c36627</color>
+    <color name="ee7559">#ee7559</color>
 </resources>
