--- a/app/src/main/res/layout/dialog_admin_region.xml
+++ b/app/src/main/res/layout/dialog_admin_region.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:background="@color/colorAccent"
+        android:background="@drawable/sp_rr_2395fc"
         android:text="查询"
         android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/recycler_view" />
