--- a/app/src/main/res/layout/item_flow_type.xml
+++ b/app/src/main/res/layout/item_flow_type.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/sr_bg_item_flow_type"
     android:layout_marginRight="1px"
-    android:minHeight="35dp">
+    android:minHeight="25dp">
 
     <TextView
         android:id="@+id/tv_text"
@@ -15,6 +15,7 @@
         android:ellipsize="end"
         android:padding="5dp"
         android:maxLines="1"
+        android:textSize="12sp"
         android:textColor="@drawable/sr_item_flow_type_text"
         tools:text="xxxxxxxx">
 
